--- a/master/www/munin-problemview.tmpl
+++ b/master/www/munin-problemview.tmpl
@@ -13,7 +13,7 @@
 		<td>
 		<div class="node">
 		<span class="nodetitle">
-			<a href="<TMPL_VAR ESCAPE="URL" NAME="NODENAME">/index.html">
+			<a href="<TMPL_VAR NAME="NODEURL">">
 			<TMPL_VAR ESCAPE="HTML" NAME="NODENAME"></a> 
 			:: <TMPL_IF NAME="URL"><a href="<TMPL_VAR NAME="URL">"></TMPL_IF>
 				<TMPL_VAR ESCAPE="HTML" NAME="LABEL">
@@ -30,7 +30,7 @@
 		<td>
 		<div class="node">
 		<span class="nodetitle">
-			<a href="<TMPL_VAR ESCAPE="URL" NAME="NODENAME">/index.html">
+			<a href="<TMPL_VAR NAME="NODEURL">">
 			<TMPL_VAR ESCAPE="HTML" NAME="NODENAME"></a> 
 			:: <TMPL_IF NAME="URL"><a href="<TMPL_VAR NAME="URLX">"></TMPL_IF>
 				<TMPL_VAR ESCAPE="HTML" NAME="LABEL">
@@ -56,7 +56,7 @@
 		<td>
 		<div class="node">
 		<span class="nodetitle">
-			<a href="<TMPL_VAR ESCAPE="URL" NAME="NODENAME">/index.html">
+			<a href="<TMPL_VAR NAME="NODEURL">">
 			<TMPL_VAR ESCAPE="HTML" NAME="NODENAME"></a> 
 			:: <TMPL_IF NAME="URL"><a href="<TMPL_VAR NAME="URL">"></TMPL_IF>
 				<TMPL_VAR ESCAPE="HTML" NAME="LABEL">
@@ -73,7 +73,7 @@
 		<td>
 		<div class="node">
 		<span class="nodetitle">
-			<a href="<TMPL_VAR ESCAPE="URL" NAME="NODENAME">/index.html">
+			<a href="<TMPL_VAR NAME="NODEURL">">
 			<TMPL_VAR ESCAPE="HTML" NAME="NODENAME"></a> 
 			:: <TMPL_IF NAME="URL"><a href="<TMPL_VAR NAME="URLX">"></TMPL_IF>
 				<TMPL_VAR ESCAPE="HTML" NAME="LABEL">
@@ -99,7 +99,7 @@
 		<td>
 		<div class="node">
 		<span class="nodetitle">
-			<a href="<TMPL_VAR ESCAPE="URL" NAME="NODENAME">/index.html">
+			<a href="<TMPL_VAR NAME="NODEURL">">
 			<TMPL_VAR ESCAPE="HTML" NAME="NODENAME"></a> 
 			:: <TMPL_IF NAME="URL"><a href="<TMPL_VAR NAME="URL">"></TMPL_IF>
 				<TMPL_VAR ESCAPE="HTML" NAME="LABEL">
@@ -116,7 +116,7 @@
 		<td>
 		<div class="node">
 		<span class="nodetitle">
-			<a href="<TMPL_VAR ESCAPE="URL" NAME="NODENAME">/index.html">
+			<a href="<TMPL_VAR NAME="NODEURL">">
 			<TMPL_VAR ESCAPE="HTML" NAME="NODENAME"></a> 
 			:: <TMPL_IF NAME="URL"><a href="<TMPL_VAR NAME="URLX">"></TMPL_IF>
 				<TMPL_VAR ESCAPE="HTML" NAME="LABEL">
