--- a/master/www/munin-serviceview.tmpl
+++ b/master/www/munin-serviceview.tmpl
@@ -73,7 +73,7 @@ This service is in CRITICAL state because one of the values reported is outside 
 <tr>
 	<th class="field">Field</th>
 	<th class="internal"><span title="For use in munin.conf">Internal name</span></th>
-	<th class="type"><a href="../../static/definitions.html#data_types">Type</a></th>
+	<th class="type"><a href="<TMPL_VAR ESCAPE="URL" NAME="R_PATH">/static/definitions.html#data_types">Type</a></th>
 	<th class="warn">Warn</th>
 	<th class="crit">Crit</th>
 	<th class="info">Info</th>
