--- a/master/www/partial/bottom_navigation.tmpl
+++ b/master/www/partial/bottom_navigation.tmpl
@@ -28,6 +28,6 @@
       </TMPL_LOOP>
       </select>
       <TMPL_ELSE>
-        :<TMPL_LOOP NAME="PEERS">: <TMPL_IF NAME="LINK"><a href="<TMPL_VAR NAME="LINK">"></TMPL_IF><TMPL_VAR NAME="PATHNAME"><TMPL_IF NAME="LINK"></a></TMPL_IF> </TMPL_LOOP>
+        :<TMPL_LOOP NAME="PEERS">: <TMPL_IF NAME="LINK"><a href="<TMPL_VAR NAME="LINK">"></TMPL_IF><TMPL_VAR NAME="NAME"><TMPL_IF NAME="LINK"></a></TMPL_IF> </TMPL_LOOP>
   </TMPL_IF>
              
