--- a/master/www/partial/logo_navigation_comparison.tmpl
+++ b/master/www/partial/logo_navigation_comparison.tmpl
@@ -1,9 +1,9 @@
 <div id="header">
 	<h1><a href="<TMPL_VAR NAME="R_PATH">"><span class="logo"></span></a><span class="currentpage">
 	<TMPL_LOOP NAME="PATH">
-		<TMPL_IF NAME="NAME"> :: 
+		<TMPL_IF NAME="PATHNAME"> :: 
 			<TMPL_IF NAME="PATH"><a href="<TMPL_VAR NAME="PATH">"></TMPL_IF>
-				<TMPL_VAR NAME="NAME">
+				<TMPL_VAR NAME="PATHNAME">
 			<TMPL_IF NAME="PATH"></a></TMPL_IF>
 		<TMPL_ELSE>
 			<TMPL_IF NAME="PATH"><a href="<TMPL_VAR NAME="PATH">"></TMPL_IF>
